--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="br.com.gfinanceiro">
 
@@ -7,20 +8,19 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-
         <activity android:name=".MainActivity">
-
             <intent-filter>
-
                 <category android:name="android.intent.category.LAUNCHER" />
 
                 <action android:name="android.intent.action.MAIN" />
-
             </intent-filter>
-
         </activity>
 
+        <provider
+            android:name=".service.provider.DataProvider"
+            android:authorities="br.com.gfinanceiro.provider.DataProvider"
+            android:enabled="true"
+            android:exported="false"></provider>
     </application>
 
 </manifest>
